--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,15 +16,15 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
-    "@heroicons/react": "~2.1.5",
+    "@heroicons/react": "2.2.0",
     "@privy-io/react-auth": "latest",
     "@rainbow-me/rainbowkit": "2.2.3",
-    "@tanstack/react-query": "~5.59.15",
-    "@uniswap/sdk-core": "~5.8.2",
-    "@uniswap/v2-sdk": "~4.6.1",
-    "blo": "~1.2.0",
+    "@tanstack/react-query": "5.74.11",
+    "@uniswap/sdk-core": "7.7.2",
+    "@uniswap/v2-sdk": "4.15.2",
+    "blo": "2.0.0",
     "burner-connector": "0.0.12",
-    "daisyui": "4.12.10",
+    "daisyui": "5.0.35",
     "kubo-rpc-client": "~5.0.2",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
