--- a/packages/foundry/foundry.toml
+++ b/packages/foundry/foundry.toml
@@ -2,48 +2,17 @@
 src = 'contracts'
 out = 'out'
 libs = ['lib']
-fs_permissions = [{ access = "read-write", path = "./"}]
-
+solc = "0.8.20"
+optimizer = true
+optimizer_runs = 200
+via_ir = true
 
 [rpc_endpoints]
-default_network = "http://127.0.0.1:8545"
-
-mainnet = "https://eth-mainnet.alchemyapi.io/v2/${ALCHEMY_API_KEY}"
-sepolia = "https://eth-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-arbitrumSepolia = "https://arb-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-optimism = "https://opt-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-optimismSepolia = "https://opt-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-polygon = "https://polygon-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-polygonMumbai = "https://polygon-mumbai.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-polygonZkEvm = "https://zkevm-rpc.com"
-polygonZkEvmTestnet = "https://rpc.public.zkevm-test.net"
-gnosis = "https://rpc.gnosischain.com"
-chiado = "https://rpc.chiadochain.net"
-base = "https://mainnet.base.org"
-baseSepolia = "https://sepolia.base.org"
-scrollSepolia = "https://sepolia-rpc.scroll.io"
-scroll = "https://rpc.scroll.io"
-pgn = "https://rpc.publicgoods.network"
-pgnTestnet = "https://sepolia.publicgoods.network"
-
-
 localhost = "http://127.0.0.1:8545"
+base_mainnet = "${BASE_MAINNET_RPC_URL}"
+base_sepolia = "${BASE_SEPOLIA_RPC_URL}"
+
 
 [etherscan]
-polygonMumbai = { key = "${ETHERSCAN_API_KEY}" }
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
-
-
-
-[fmt]
-line_length = 120
-tab_width = 4
-quote_style = "double"
-bracket_spacing = true
-int_types = "long"
-
-
-
-
-# See more config options https://book.getfoundry.sh/reference/config/overview
+base_mainnet = { key = "${BASESCAN_API_KEY}", url = "https://api.basescan.org/api" }
+base_sepolia = { key = "${BASESCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
